# MemoryKit-Python-SDK

./: .gitignore  CLAUDE.md  QA_REPORT_SDK_PY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
memorykit/: __init__.py  _client.py  _errors.py  _sse.py  _types.py  chats.py  feedback.py  memories.py  status.py  users.py  webhooks.py
tests/: test_async_client.py  test_client.py  test_endpoint_paths.py  test_exports.py  test_models.py  test_request_building.py  test_return_types.py  test_sse.py
