[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorykit"
version = "0.1.1"
description = "Official Python SDK for the MemoryKit API — memory infrastructure for AI applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "MemoryKit", email = "support@memorykit.io" },
]
keywords = [
    "memorykit",
    "ai",
    "memory",
    "rag",
    "llm",
    "knowledge-base",
    "vector-search",
    "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://memorykit.io"
Documentation = "https://docs.memorykit.io"
Repository = "https://github.com/MemoryKitIO/memorykit-python"
Issues = "https://github.com/MemoryKitIO/memorykit-python/issues"
Changelog = "https://github.com/MemoryKitIO/memorykit-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["memorykit"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
